--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=BlackJackMaster
 server.port=8080
+
+spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.database=blackjackdb
+
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
